发现页面完成，发现详情页面需要完善

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
-        <activity android:name=".widget.activity.VideoDetailActivity"></activity>
+        <activity android:name=".widget.activity.VideoDetailActivity" />
+        <activity android:name=".widget.activity.FindDetailActivity"></activity>
     </application>
 
 </manifest>
