--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
         <meta-data
             android:name="design_height_in_dp"
             android:value="640" />
+
+        <activity android:name=".widget.activity.WatchActivity" />
+        <activity android:name=".widget.activity.AdviseActivity" />
+        <activity android:name=".widget.activity.CacheActivity" />
     </application>
 
 </manifest>
